--- a/.github/workflows/docker_deploy.yml
+++ b/.github/workflows/docker_deploy.yml
@@ -21,11 +21,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
+
       - name: Build and Push Docker Image
         run: |
           docker buildx create --use
-          docker buildx build --platform linux/amd64,linux/arm64 -t abeinevicenthome/nodedockerdemo:latest .
+          docker buildx build --platform linux/amd64,linux/arm64 -t yourusername/nodedockerdemo:latest --push .
+
           docker push abeinevicenthome/nodedockerdemo:latest
         env:
           DOCKER_CLI_EXPERIMENTAL: enabled
