--- a/.github/workflows/docker_deploy.yml
+++ b/.github/workflows/docker_deploy.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Build and Push Docker Image
         run: |
           docker buildx create --use
-          docker buildx build --platform linux/amd64,linux/arm64 -t abeinevicenthome/nodedockerdemo:latest --push .
+          docker buildx build --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKERHUB_USERNAME }}/nodedockerdemo:latest --push .
 
-          docker push abeinevicenthome/nodedockerdemo:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/nodedockerdemo:latest
         env:
           DOCKER_CLI_EXPERIMENTAL: enabled
